[package]
name = "h6"
version = "0.1.0"
edition = "2024"

[dependencies]
h6-compiler = { path = "compiler", features = ["color", "serde"] }
h6-bytecode = { path = "bytecode" }
h6-runtime = { path = "runtime" }

clap = { version = "4.5.35", features = ["derive"] }
camino = "1.1.9"
better-panic = "0.3.0"
smallvec = "2.0.0-alpha.11"
fixed = "1.28.0"
reedline = "0.39.0"
chumsky = "1.0.0-alpha.8"
nu-ansi-term = "0.50.1"
