[package]
name = "h6"
version = "0.2.0"
edition = "2024"

[features]
default = []
repl = ["dep:reedline", "dep:nu-ansi-term"]

[dependencies]
h6-compiler = { path = "compiler", features = [] }
h6-bytecode = { path = "bytecode", features = ["std", "smallvec"] }
h6-runtime = { path = "runtime", features = ["std", "smallvec"] }

clap = { version = "4.5.35", features = ["derive"] }
camino = "1.1.9"
better-panic = "0.3.0"
smallvec = "2.0.0-alpha.11"
reedline = { version = "0.39.0", optional = true }
chumsky = "1.0.0-alpha.8"
nu-ansi-term = { version = "0.50.1", optional = true }
