[package]
name = "h6-compiler"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = ["serde", "color"]
serde = ["dep:serde"]
color = ["dep:yansi"]

[dependencies]
h6-bytecode = { path = "../bytecode" }

chumsky = "1.0.0-alpha.8"
yansi = { version = "1.0.1", optional = true }
serde = { version = "1.0.217", features = ["derive"], optional = true }
smallvec = "2.0.0-alpha.11"
itertools = "0.14.0"
fixed = "1.28.0"
